udpate sale-detail

--- a/lib/tabs/t-2/index.pug
+++ b/lib/tabs/t-2/index.pug
@@ -2,14 +2,42 @@ section.canhcam-tabs-2
 	.container
 		.row
 			.col
-				ul#ccTabs.nav.nav-tabs(role="tablist")
+				ul#sale-tababs.nav.nav-tabs(role="tablist")
 					li.nav-item
-						a#cct-01-tab.nav-link.active(data-toggle="tab" href="#cct-01" role="tab" aria-controls="cct-01" aria-selected="true") Home
+						a#sale-tab-01-tab.nav-link.active(data-toggle="tab" href="#sale-tab-01" role="tab" aria-controls="sale-tab-01" aria-selected="true") Thông tin chung
 					li.nav-item
-						a#cct-02-tab.nav-link(data-toggle="tab" href="#cct-02" role="tab" aria-controls="cct-02" aria-selected="false") Profile
+						a#sale-tab-02-tab.nav-link(data-toggle="tab" href="#sale-tab-02" role="tab" aria-controls="sale-tab-02" aria-selected="false") Ưu điểm
 					li.nav-item
-						a#cct-03-tab.nav-link(data-toggle="tab" href="#cct-03" role="tab" aria-controls="cct-03" aria-selected="false") Contact
-				#ccTabsContent.tab-content
-					#cct-01.tab-pane.fade.show.active(role="tabpanel" aria-labelledby="cct-01-tab") Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nulla, recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
-					#cct-02.tab-pane.fade(role="tabpanel" aria-labelledby="cct-02-tab") Eveniet nulla, recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
-					#cct-03.tab-pane.fade(role="tabpanel" aria-labelledby="cct-03-tab") Recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
+						a#sale-tab-03-tab.nav-link(data-toggle="tab" href="#sale-tab-03" role="tab" aria-controls="sale-tab-03" aria-selected="false") Tiện ích
+				#sale-tababsContent.tab-content
+					#sale-tab-01.tab-pane.fade.show.active(role="tabpanel" aria-labelledby="sale-tab-01-tab")
+						p Nhà mặt tiền đường rộng 16m, 01 trệt, 2 lầu, 01 lửng , vị trí đẹp, nhà thoáng mát, đường nhánh thuộc Nguyễn Văn Linh
+						p Với việc hạn chế diện tích đất mà để đảm bảo ngôi nhà có không gian sống và sinh hoạt thoải mái cho gia đình bạn thì chúng ta có thể thiết kế ngôi nhà theo kiểu nhà tầng. Lúc này việc thiết kế cần dựa vào mặt tiền và tính thẩm mỹ là yếu tố hàng đầu, đồng thời phải tạo được 1 khoảng không gian trong lành, thoải mái. Điều này chúng ta có thể lợi dụng các hình khối, đường ngang của căn nhà làm điểm nhấn để thiết kế.
+						p Để có 1 căn nhà phố hiện đại thì bạn nên thiết kế từ 2 tầng trở lên vì như vậy sẽ đảm bảo ánh sáng. Đa phần nhà phố thường sử dụng các vật liệu như kính, sắt… nhằm tạo tính sang trọng và thông thoáng cho ngôi nhà.
+						p Ngoài ra, màu sắc cũng là yếu tố quan tâm của các kiến trúc sư, để kết hợp hài hòa giữa màu sắc của nội thất và ngoại thất tạo nên vẻ sang trọng và cái nhìn ấn tượng khi nhìn vào.
+						p Với 1 diện tích rộng bạn hoàn toàn có được cho mình 1 ngôi nhà đầy đủ cả về mặt thiên nhiên và tự nhiên, tạo ra sự khỏe khoắn của ngôi nhà. Như vậy chúng ta hoàn toàn có thể xây dựng với cấu trúc căn nhà 3 tầng cùng đó là ban công vươn ra khỏi mặt tiền, đồng thời có cả khu vui chơi, giải trí của gia đình sẽ giúp căn nhà của bạn trở nên thoáng đãng và hoàn mỹ hơn.
+						p Cách thiết kế này đã rất nổi tiếng mà được khá nhiều gia đình áp dụng . Với hàng cây xanh đủ chủng loại được trang trí 1 cách độc đáo đem lại nét tự nhiên cho ngôi nhà bạn thì còn điều gì là tuyệt bằng phải không nào.
+						table.table-responsive
+							tr
+								td.detail Đặc điểm nổi bật
+								td Nhà mặt tiền đường rộng 16m, 01 trệt, 2 lầu, 01 lửng , vị trí đẹp, nhà thoáng mát, đường lớn trung tâm
+							tr
+								td.detail Tình hình nội thất
+								td Nội thất cơ bản
+							tr
+								td.detail Mô tả vị trí
+								td Nhà mặt tiền đường rộng 16m, 01 trệt, 2 lầu, 01 lửng , vị trí đẹp, nhà thoáng mát, đường nhánh thuộc Nguyễn Văn Linh
+							tr
+								td.detail Cộng đồng dân cư
+								td Yên tĩnh, thân thiện
+							tr
+								td.detail Về giáo dục
+								td Gần trường Rmit, trường học phổ thông cấp 1,2,3
+							tr
+								td.detail Tiện ích
+								td Truyền hình cáp, Internet, Trung tâm thương mại
+							tr
+								td.detail Nội thất
+								td Tủ bếp, nội thất cơ bản
+					#sale-tab-02.tab-pane.fade(role="tabpanel" aria-labelledby="sale-tab-02-tab") Eveniet nulla, recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
+					#sale-tab-03.tab-pane.fade(role="tabpanel" aria-labelledby="sale-tab-03-tab") Recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
