--- a/templates/sale-detail.pug
+++ b/templates/sale-detail.pug
@@ -1,8 +1,18 @@
 extends _layout/layout.pug
 block variables
-	- var title = "sale-detail"
-	- var description = "Description for sale-detail page"
-	- var bodyclass = "sale-detail"
-	- var href = "/sale-detail.html"
+	- var title = "about"
+	- var description = "Description for about page"
+	- var bodyclass = "about"
+	- var href = "/about.html"
+block header
+	include ../lib/header/h-14/index.pug
 block body
+	include ../lib/breadcrumb/b-1/index.pug
+	include ../lib/nav/n-3/index.pug
+	include ../lib/sale-detail/s-1/index.pug
 	include ../lib/tabs/t-2/index.pug
+	include ../lib/sale-detail/s-2/index.pug
+	include ../lib/bonus/b-1/index.pug
+block footer
+	include ../lib/footer/f-1/index.pug
+	include ../lib/footer/f-7/index.pug
