--- a/lib/banner/b-1/index.pug
+++ b/lib/banner/b-1/index.pug
@@ -1,9 +1,16 @@
 section.canhcam-banner-1
 	article.list-items
 		.item(bg-img="./img/antuong/home/home_banner.png")
-			.title
-				h1.h1 Main title
-				p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque tempora vel quas atque labore aliquid rem dicta inventore iste
+			.container
+				.row.no-gutters
+					.col-md-5.align-self-center.d-flex.animated.bounceInUp.slower
+						img(src="./img/antuong/home/home_icon.png", style='width: 24px; height:24px' alt="")
+						.content.ml-4
+							h3 Mạng lưới cộng tác viên bất động sản hiệu quả và uy tín
+							p Kiếm thu nhập cùng AN TƯỜNG REAL từ hơn 100 dự án BĐS hấp dẫn của các nhà đầu tư hàng đầu Việt Nam.
+					.col-md-7
+						.img-content
+							img.img-fluid(src="./img/antuong/home/home_img.png", alt="").animated.pulse.delay-5s.infinite.slower
 		.item(bg-img="./img/antuong/home/home_banner.png")
 			.title
 				h1.h1 Main title
