--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -30,7 +30,7 @@ header.canhcam-header-14
 					a(href="#").register
 						| Đăng ký
 					a(href="#").login
-						| Đăng ký
+						| Đăng nhập
 			ul.nav
 				li.nav-item.active
 					a.nav-link.home(href='#') 
