--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -112,6 +112,7 @@
 		.nav
 			.nav-item
 				.nav-link
+					+fw(700)
 					height: 100%
 					color: lighten(color-get($mau,trang),0%)
 					&.home
