--- a/lib/nav/n-3/index.pug
+++ b/lib/nav/n-3/index.pug
@@ -4,6 +4,6 @@ section.canhcam-nav-3
 			nav
 				ul
 					li
-						a.active(href="#canhcam-about-section-1") Bán
+						a.active(href="#") Bán
 					li
-						a(href="#canhcam-about-section-2") Cho thuê
+						a(href="#") Cho thuê
