--- a/lib/nav/n-4/index.pug
+++ b/lib/nav/n-4/index.pug
@@ -4,10 +4,10 @@ section.canhcam-nav-4
 			nav
 				ul
 					li
-						a.active(href="#canhcam-about-section-1") Thị trường
+						a.active(href="#") Thị trường
 					li
-						a(href="#canhcam-about-section-2") Affiliate Network
+						a(href="#") Affiliate Network
 					li
-						a(href="#canhcam-about-section-2") Kiếm tiền Online
+						a(href="#") Kiếm tiền Online
 					li
-						a(href="#canhcam-about-section-2") Thông báo
+						a(href='#') Thông báo
