--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -234,4 +234,6 @@ a.btn-more
 	&:hover
 		background: color-get($mau,main)
 		color: color-get($mau,trang)
-
+.mt-lg-30p
+	+media-breakpoint-up(lg)
+		margin-top: 30px
