--- a/lib/news-details/n-1/index.pug
+++ b/lib/news-details/n-1/index.pug
@@ -2,11 +2,11 @@ section.canhcam-news-details-1
 	article.news-details
 		.container
 			.row
-				.col-lg-8
+				.col-lg-9
 					.news-read
-						time 12/12/2017
 						h1 golf-etc EXPANDS REFLECTIVE TECHNOLOGY OFFERING IN SPRING 2017  COLLECTION
 						hr
+						.time 12/12/2017
 						p.lead Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium ab eos ut dolor rerum natus nostrum mollitia id iste velit saepe at possimus fuga dolorem, nemo suscipit quas cupiditate. Undt consectetur adipisicing elit. Accusantium ab eos ut dolor rerum natus nostrum mollitia id iste velit saepe at possimus fuga dolorem, nemo suscipit quas cupiditate. Undt consectetur adipisicing elit. Accusantium ab eos ut dolor rerum natus nostrum mollitia id iste velit saepe at possimus fuga dolorem, nemo suscipit quas cupiditate. Unde?
 						.card.mb-3.bg-light
 							.card-body Lorem ipsum dolor sit amet, consectetur adipisicing elit. In accusamus, atque illum voluptates voluptatibus exercitationem asperiores maiores omnis id quo, eum blanditiis? Animi ratione delectus magni, quam illum repellendus quibusdam.
@@ -51,9 +51,9 @@ section.canhcam-news-details-1
 							.nav-item
 								.g-plusone(data-size="tall")
 
-				.col-lg-4
+				.col-lg-3
 					.othernews(data-fix="50", data-fix-type="initial", data-fix-change="sticky")
-						h2 Tin liên quan
+						h2 Bài viết khác
 						hr
 						.lists
 							a.item(href="#")
