--- a/lib/news-details/n-1/index.sass
+++ b/lib/news-details/n-1/index.sass
@@ -12,18 +12,19 @@
 		margin-bottom: 2rem
 		h1
 			+fz(1.5rem)
-			+fw(400)
+			+fw(600)
 		hr
-			border-top: 1px dashed darken(color-get($mau,trang) ,10%)
+			border-top: 1px solid darken(color-get($mau,extra) ,0%)
 		p
 			+fz(1.1rem)
 			+fw(400)
 			&.lead
 				+fw(bold)
-		time
+		.time
 			+fz(.9rem)
-			+fw(200)
-			color: darken(color-get($mau,trang) ,10%)
+			+fw(400)
+			color: darken(color-get($mau,text-3) ,0%)
+			margin-bottom: 1rem
 		.item-news-read
 			text-decoration: none
 			figcaption
@@ -35,15 +36,15 @@
 				&:last-child
 					margin-right: 0
 	.othernews
-		+bor-rad(5px)
 		overflow: hidden
 		width: 100%
 		hr
 			border-top: 1px dashed darken(color-get($mau,trang) ,10%)
 		h2
 			color: color-get($mau,main)
-			+fz(1.4rem)
+			+fz(1.5rem)
 			margin-bottom: 0
+			text-transform: uppercase
 		h3
 			color: color-get($mau,main)
 			+fz(1.4rem)
@@ -53,7 +54,6 @@
 				display: flex
 				text-decoration: none
 				height: 100%
-				+bor-rad(5px)
 				overflow: hidden
 				&:last-child
 					figure
@@ -64,23 +64,20 @@
 				figure
 					position: relative
 					overflow: hidden
-					+bor-rad(5px)
 					margin-bottom: 2rem
-					background: darken(color-get($mau,trang) ,3%)
 					img
-						+bor-rad(5px 5px 0 0)
 						width: 100%
 					figcaption
 						padding: 1rem
 
 						h3
 							+fz(1.1rem)
-							+fw(400)
-							color: color-get($mau,main)
+							+fw(500)
+							color: color-get($mau,text-1)
 						time
-							+fz(.9rem)
-							+fw(200)
-							color: darken(color-get($mau,trang) ,30%)
+							fz(.9rem)
+							+fw(400)
+							color: darken(color-get($mau,text-3) ,0%)
 						p
 							color: darken(color-get($mau,trang) ,60%)
 							line-height: 1.3rem
@@ -99,14 +96,12 @@
 							p
 								color: darken(color-get($mau,trang) ,70%)
 		+media-breakpoint-up(lg)
-			background: darken(color-get($mau,trang) ,4%)
 			hr
 				display: none
 			h2
-				background: color-get($mau,main)
-				color: color-get($mau,trang)
+				background: color-get($mau,extra)
+				color: color-get($mau,text-1)
 				+pad(1rem)
-				+bor-rad(5px 5px 0 0)
 			.lists
 				+pad(1rem)
 				.item
@@ -127,13 +122,12 @@
 							display: block
 							height: 100%
 							+pos(abs, 0 null null 0)
-							width: 30%
-							max-width: 30%
-							+bor-rad(5px)
+							width: 450%
+							max-width: 45%
 						img
 							display: none
 						figcaption
-							+pad(0 0 0 calc(30% + 1rem))
+							+pad(0 0 0 calc(45% + 1rem))
 							p
 								display: none
 					&:hover
