--- a/lib/nav/n-5/index.sass
+++ b/lib/nav/n-5/index.sass
@@ -5,16 +5,8 @@
 
 
 
-.canhcam-nav-2
-	position: sticky
-	position: -webkit-sticky
-	top: 63px
+.canhcam-nav-5
 	border-bottom: 1px solid darken(color-get($mau,trang),20%)
-	+media-breakpoint-up(lg)
-		top: 50px
-	width: 100%
-	z-index: 99
-	background: color-get($mau,trang)
 	.nav-list
 		ul
 			margin-bottom: 0
@@ -35,18 +27,18 @@
 					z-index: 1
 					display: block
 					box-sizing: border-box
-					+pad(1rem)
+					+pad(.6rem 3rem)
 					color: darken(color-get($mau,trang),50%)
 					text-decoration: none
 					position: relative
-					+fz(1rem)
+					+fz(1.1rem)
 					+fw(400)
 					+transition(all 0.3s ease-in-out)
 					+media-breakpoint-up(lg)
 						&:after
 							content: '|'
 							color: color-get($mau,xam-2)
-							+pos(abs, 12px -3px null null)
+							+pos(abs, 7px -3px null null)
 				
 					&.active,&:hover
 						color: color-get($mau,text-1)
