--- a/lib/bonus/b-1/index.pug
+++ b/lib/bonus/b-1/index.pug
@@ -5,4 +5,4 @@ section.canhcam-bonus-1(bg-img='./img/antuong/bg_2.png')
 				h3 Bạn là cộng tác viên?
 				p tăng doanh số bán hàng cùng an tường real
 			.button.d-flex.mt-3.mt-md-0
-				a.btn.btn-contact(href="#") Liên hệ ngay
+				a.btn.btn-contact(href="#") tham gia ngay
