--- a/lib/bonus/b-1/index.sass
+++ b/lib/bonus/b-1/index.sass
@@ -23,6 +23,7 @@ section.canhcam-bonus-1
 		.button
 			justify-content: center
 			a.btn-contact
+				text-transform: uppercase
 				+pad(.5rem 3rem)
 				background-image: -moz-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
 				background-image: -webkit-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
