--- a/lib/boxes/b-9/index.pug
+++ b/lib/boxes/b-9/index.pug
@@ -1,46 +1,29 @@
 section.canhcam-services-9
 	.container
-		.row.no-gutters.mb-4
-			.col-lg 
-				figure
-					img(src="./img/slider/slider-big-1.jpg", alt="alt").img-fluid
-			.col-lg-5
-				.text 
-					h3.h3 Nội thất
-					p.lead Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi maxime ipsam voluptates nesciunt vitae consectetur esse molestias repellendus corrupti excepturi mollitia, eaque dolore ducimus animi aliquid perferendis blanditiis quidem.
-					p.mb-0 
-						a(href="#") Xem thêm 
-							i.mdi.mdi-arrow-right 
-		.row.no-gutters.mb-4
-			.col-lg.order-lg-2
-				figure
-					img(src="./img/slider/slider-big-2.jpg", alt="alt").img-fluid
-			.col-lg-5.order-lg-1
-				.text-odd
-					h3.h3 Nội thất
-					p.lead Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi maxime ipsam voluptates nesciunt vitae consectetur esse molestias repellendus corrupti excepturi mollitia, eaque dolore ducimus animi aliquid perferendis blanditiis quidem.
-					p.mb-0 
-						a(href="#") Xem thêm 
-							i.mdi.mdi-arrow-right 
-		.row.no-gutters.mb-4
-			.col-lg 
-				figure
-					img(src="./img/slider/slider-big-3.jpg", alt="alt").img-fluid
-			.col-lg-5
-				.text 
-					h3.h3 Nội thất
-					p.lead Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi maxime ipsam voluptates nesciunt vitae consectetur esse molestias repellendus corrupti excepturi mollitia, eaque dolore ducimus animi aliquid perferendis blanditiis quidem.
-					p.mb-0 
-						a(href="#") Xem thêm 
-							i.mdi.mdi-arrow-right 
-		.row.no-gutters.mb-4
-			.col-lg.order-lg-2
-				figure
-					img(src="./img/slider/slider-big-1.jpg", alt="alt").img-fluid
-			.col-lg-5.order-lg-1
-				.text-odd
-					h3.h3 Nội thất
-					p.lead Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi maxime ipsam voluptates nesciunt vitae consectetur esse molestias repellendus corrupti excepturi mollitia, eaque dolore ducimus animi aliquid perferendis blanditiis quidem.
-					p.mb-0 
-						a(href="#") Xem thêm 
-							i.mdi.mdi-arrow-right
+		h1.antuong-title.upcase.mb-4.mb-lg-5 hoa hồng & phương thức thanh toán
+		.pay-content
+			.row.mb-4
+				.col-lg.order-lg-2.text-center
+					figure
+						img(src="./img/antuong/pay/pay_1.png", alt="alt").img-fluid
+				.col-lg-7.order-lg-1
+					.text 
+						h3.h3 Những lợi ích của bạn:
+						ul.content
+							li 5% Hoa hồng trên mỗi sản phẩm bán hàng thành công Thưởng thêm 5% hoa hồng trên tổng doanh số với điều kiện : Có 05 đơn hàng thành công /quý
+							li Duy trì 05 đơn hàng thành công /quý  liên tục trong 12 tháng kế tiếp CTV trực tiếp tư vấn và dẫn khách tham quan và khách hàng mua dự án, CTV hỗ trợ đặt hàng trên ATR thì CTV sẽ được hưởng hoa hồng Mức 3
+							li Hỗ trợ trực tiếp và nhanh chóng từ đội ngũ giàu kinh nghiệm về BĐS tại ATR Đơn hàng được tính chỉ sau 45 ngày tính từ ngày đơn hàng được đặt hàng thành công.
+							li Thông tin dự án luôn được cập nhật rõ ràng để CTV có thể theo dõi cũng như tư vấn cho khách hàng có nhu cầu tại ATR
+			.row
+				.col-lg.text-center
+					figure
+						img(src="./img/antuong/pay/pay_2.png", alt="alt").img-fluid.w-100
+				.col-lg-8
+					.text 
+						h3.h3 Thanh toán cho CTV:
+						ul.content
+							li.mb-3 Thanh toán sẽ được thực hiện sau 45 ngày từ khi ATR kiểm tra và xác nhận, sửa đổi hoặc từ chối các giao dịch được thực hiện từ website/facebook của bạn. Sau khi tiến hành các bước cần thiết sẽ trực tiếp thanh toán cho các Cộng tác viên.
+							li Hình thức thanh toán: chuyển khoản ngân hàng vào tài khoản mà Cộng tác viên cung cấp ( Lưu ý: Tài khoản ngân hàng phải của Cộng tác viên, không giải quyết tất cả trường hợp không có tài khoản, nhận thay )
+							li.mb-3 Số tiền tối thiểu để được thanh toán là 50.000,000 VNĐ
+							li Ví  dụ: nếu bạn bắt đầu bán hàng trong tháng 1 thì tất cả đơn hàng thành công từ ngày 1/1 đến 30/1 sẽ được chốt vào vào ngày 01/03 và các bạn nhận được hoa hồng của tháng 01 vào ngày 20/3.
+						a.btn.btn-register.mt-4 Đăng ký cộng tác viên atr
