--- a/lib/project-detail/p-7/index.pug
+++ b/lib/project-detail/p-7/index.pug
@@ -50,7 +50,7 @@ section.canhcam-project-detail-7(bg-img='./img/antuong/project_detail/detail_bg.
 				.col-12
 					a.justify-content-center.item(href="https://www.youtube.com/watch?v=3oU4fGSMGcI&t=0s&list=PLsd7C5Bpj3ZHCYMQgtW9AOh-nWuFuo1Ao&index=1", data-poster="./img/antuong/project_detail/detail_9.png",  data-sub-html="<h4>Giới thiệu Đời Photo</h4>")
 						figure
-							.boxzoom
+							.video
 								.zoom-item
 									img.img-fluid(src="./img/antuong/project_detail/play.png", alt="Demo title")
 								img.img-fluid(src="./img/antuong/project_detail/detail_9.png", alt="Demo title")
