--- a/templates/history.pug
+++ b/templates/history.pug
@@ -1,15 +1,15 @@
 extends _layout/layout.pug
 block variables
-	- var title = "pay"
-	- var description = "Description for pay page"
-	- var bodyclass = "pay"
-	- var href = "/pay.html"
+	- var title = "history"
+	- var description = "Description for history page"
+	- var bodyclass = "history"
+	- var href = "/history.html"
 block header
 	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/breadcrumb/b-1/index.pug
-	include ../lib/nav/n-7/index.pug
-	include ../lib/boxes/b-9/index.pug
+	include ../lib/nav/n-6/index.pug
+	include ../lib/history/h-1/index.pug
 	include ../lib/bonus/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
