--- a/lib/boxes/b-9/index.sass
+++ b/lib/boxes/b-9/index.sass
@@ -7,23 +7,28 @@
 	+pad(2rem 0)
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
-	h3 
-		text-transform: uppercase
-		color: lighten(color-get($mau,main),0%)
-		font-weight: 600 
-		position: relative
-		margin-bottom: 2rem
-		&:before
-			display: block
-			width: 60px
-			height: 2px
-			background: lighten(color-get($mau,extra),0%)
-			content: ''
-			+pos(abs, calc(100% + 10px) null null 0)
-	+media-breakpoint-up(lg)
-		.text 
-			padding-left: 2rem 
-			text-align: justify
-		.text-odd
-			text-align: justify
-			padding-right: 2rem 
+	.pay-content
+		+pad(3rem)
+		+bor(null, solid color-get($mau,main),1px)
+		+bor-rad(10px)
+		h3
+			color: lighten(color-get($mau,main),0%)
+			font-weight: 600 
+			position: relative
+			margin-bottom: 1.5rem
+		.content
+			margin-left: -20px
+			+fz(1rem)
+			+fw(400)
+			color: color-get($mau,text-2)
+		a.btn-register
+			+pad(.3rem 4rem)
+			background: color-get($mau,extra)
+			color: color-get($mau,text-1)
+			+fw(500)
+			text-transform: uppercase
+			+bor-rad(5px)
+			+bor(null,solid color-get($mau,extra),3px)
+			&:hover
+				background: none
+				color: color-get($mau,extra)
