--- a/lib/project-detail/p-7/index.sass
+++ b/lib/project-detail/p-7/index.sass
@@ -34,7 +34,7 @@
 				overflow: hidden
 				// +bor-rad(5px)
 				margin-bottom: 0
-				.boxzoom
+				.video
 					overflow: hidden
 					position: relative
 					// +bor-rad(5px)
@@ -74,7 +74,7 @@
 						margin-bottom: 0
 			&:hover
 				figure
-					.boxzoom
+					.video
 						&:after
 							z-index: -1
 						img
