--- a/lib/sale-detail/s-2/index.sass
+++ b/lib/sale-detail/s-2/index.sass
@@ -21,7 +21,8 @@
 					+pad(.5rem_)
 					width: 3rem
 					height: 3rem
-					background: darken(color-get($mau,trang),5%)
+					color: color-get($mau,trang)
+					background: darken(color-get($mau,main),0%)
 					+bor-rad(50%)
 					text-align: center
 					&:focus
@@ -38,6 +39,7 @@
 						+mar(0)
 						width: auto
 						height: auto
+						color: color-get($mau,text-1)
 						background: none
 						&:hover
 							background: none
