--- a/lib/information/i-1/index.sass
+++ b/lib/information/i-1/index.sass
@@ -8,7 +8,7 @@ section.canhcam-information-1
 	+media-breakpoint-up(lg)
 		+pad(4rem null)
 	.info
-		+pad(3rem)
+		+pad(3rem 2rem)
 		+bor(null, solid color-get($mau,main),1px)
 		+bor-rad(5px)
 		color: color-get($mau,text-2)
